# cojac-grind

./: .gitignore  CojacgrindGuide.md  ProjectHome.md  README.md
HelloCojac/: .cproject  .project  HC  hellodump.txt
HelloCojac/Debug/: HelloCojac
HelloCojac/src/: H32-no-sse  H32-no-sse.vex.txt  H32.lst  H32.s  H32.vex.txt  H64  H64-no-sse  H64-no-sse.lst  H64-no-sse.s  H64-no-sse.vex.txt  H64-nosse2  H64-raw  H64-raw.txt  H64.lst  H64.s  H64.vex.txt  HelloCojac.c  HelloCompile.bash  HelloMalloc.c  a.out  a.txt  h64.txt
cogrind-gitlab/: .autotools  .cproject  .gitignore  .project  Makefile.all.am  Makefile.am  Makefile.in  Makefile.tool.am  Makefile.vex.in  configure  configure.ac  configure.in  glibc-2.X-drd.supp  glibc-2.X.supp.in
cogrind-gitlab/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cogrind-gitlab/auxprogs/: Makefile.in
cogrind-gitlab/cojac/: Makefile.in  README-Cojac.txt  bapst_notes.txt  oa_callbacks_F32.c  oa_callbacks_F64.c  oa_callbacks_I32.c  oa_callbacks_I64.c  oa_error_mgt.c  oa_include.h  oa_main.c
cogrind-gitlab/cojac/docs/: oa-manual.xml
cogrind-gitlab/cojac/tests/: Add32.c  Add32Overflow.stderr.exp  Add32OverflowNeg.vgtest  Add64.c  Add64.vgtest  Add64Overflow.c  Add64Overflow.stderr.exp  Add64Overflow.vgtest  Add64OverflowNeg.c  AddF32.c  AddF32.vgtest  AddF32Cancel.c  AddF32Cancel.stderr.exp  AddF32Cancel.vgtest  AddF32Infinity.c  AddF32Nan.c  AddF32Pre.vgtest  AddF64.vgtest  AddF64Cancel.c  AddF64Cancel.stderr.exp  AddF64Infinity.c  AddF64Infinity.stderr.exp  AddF64Nan.c  AddF64Nan.stderr.exp  AddF64Nan.vgtest  AddF64Pre.stderr.exp  AsinLibcF32.c  AsinLibcF32.vgtest  AsinLibcF32Nan.c  AsinLibcF32Nan.stderr.exp-2  AsinLibcF32Nan.vgtest  AsinLibcF64.c  AsinLibcF64.stderr.exp  AsinLibcF64Nan.c  AsinLibcF64Nan.vgtest  CmpF64.c  CmpF64.vgtest  CmpF64Close.c  CmpF64Close.stderr.exp  CmpF64Pre.stderr.exp  (+130 more)
cogrind-gitlab/coregrind/: Makefile.in
cogrind-gitlab/docs/: Makefile.in
cogrind-gitlab/drd/: Makefile  Makefile.in
cogrind-gitlab/drd/tests/: Makefile  Makefile.in
cogrind-gitlab/exp-bbv/: Makefile.in
cogrind-gitlab/exp-bbv/tests/: Makefile.in
cogrind-gitlab/exp-bbv/tests/amd64-linux/: Makefile.in  clone_test.out.pc
cogrind-gitlab/exp-bbv/tests/arm-linux/: Makefile.in
cogrind-gitlab/exp-bbv/tests/ppc32-linux/: Makefile.in
cogrind-gitlab/exp-bbv/tests/x86/: Makefile.in
cogrind-gitlab/exp-bbv/tests/x86-linux/: Makefile.in
cogrind-gitlab/exp-dhat/: Makefile.in
cogrind-gitlab/exp-dhat/tests/: Makefile.in
cogrind-gitlab/exp-sgcheck/: Makefile.in
cogrind-gitlab/exp-sgcheck/tests/: Makefile.in
cogrind-gitlab/gdbserver_tests/: .gitignore  Makefile.in  garbage.filtered.out  massif.vgdb.out  vgdb
cogrind-gitlab/include/: Makefile.in
cogrind-gitlab/memcheck/: Makefile.in
cogrind-gitlab/memcheck/tests/: Makefile.in  origin5-bz2.stderr.diff-glibc212-s390x  origin5-bz2.stderr.diff-glibc234-s390x  origin5-bz2.stderr.diff-glibc25-amd64  origin5-bz2.stderr.diff-glibc25-x86  origin5-bz2.stderr.diff-glibc27-ppc64
cogrind-gitlab/memcheck/tests/amd64/: Makefile.in
cogrind-gitlab/memcheck/tests/amd64-linux/: Makefile.in
cogrind-gitlab/memcheck/tests/common/: Makefile.in
cogrind-gitlab/memcheck/tests/darwin/: Makefile.in
cogrind-gitlab/memcheck/tests/linux/: Makefile.in
cogrind-gitlab/memcheck/tests/ppc32/: Makefile.in
cogrind-gitlab/memcheck/tests/ppc64/: Makefile.in
cogrind-gitlab/memcheck/tests/s390x/: Makefile.in
cogrind-gitlab/memcheck/tests/vbit-test/: Makefile.in
cogrind-gitlab/memcheck/tests/x86/: Makefile.in
cogrind-gitlab/memcheck/tests/x86-linux/: Makefile.in
cogrind-gitlab/mpi/: Makefile.in
cogrind-gitlab/none/: Makefile  Makefile.in
cogrind-gitlab/none/tests/: Makefile  Makefile.in  allexec64  ansi.c
cogrind-gitlab/none/tests/amd64/: Makefile  Makefile.in
cogrind-gitlab/none/tests/arm/: Makefile  Makefile.in
cogrind-gitlab/none/tests/darwin/: Makefile  Makefile.in
cogrind-gitlab/none/tests/linux/: Makefile  Makefile.in
cogrind-gitlab/none/tests/mips32/: Makefile  Makefile.in
cogrind-gitlab/none/tests/mips64/: Makefile.in
cogrind-gitlab/none/tests/ppc32/: Makefile  Makefile.in
cogrind-gitlab/none/tests/ppc64/: Makefile  Makefile.in
cogrind-gitlab/none/tests/s390x/: Makefile  Makefile.in
cogrind-gitlab/none/tests/x86-linux/: Makefile  Makefile.in
cogrind-gitlab/perf/: Makefile.in
cogrind-gitlab/tests/: Makefile.in  check_headers_and_includes
cogrind/cojac/: Makefile.am  README-Cojac.txt  oa_callbacks_F64.c
cojac-grind/: .cproject  Makefile.am  Makefile.vex.in  aclocal.m4  configure.ac
cojac-grind/autom4te.cache/: output.1
cojac-grind/cojac/: oa_callbacks_I16.c  oa_error_mgt.c  oa_main.c  oa_utils.c  oa_utils.h
cojac-grind/cojac/tests/: Add32.vgtest  Add32Overflow.c  Add32Overflow.stderr.exp  Add32Overflow.vgtest  Add32OverflowNeg.c  Add32OverflowNeg.stderr.exp  Add64OverflowNeg.stderr.exp  Add64OverflowNeg.vgtest  AddF32Infinity.stderr.exp  AddF32Infinity.vgtest  AddF32Nan.stderr.exp  AddF32Nan.vgtest  AddF32Pre.c  AddF32Pre.stderr.exp  AddF64.c  AddF64Cancel.vgtest  AddF64Infinity.vgtest  AddF64Pre.c  AddF64Pre.vgtest  AsinLibcF32Nan.stderr.exp  AsinLibcF64.vgtest  AsinLibcF64Nan.stderr.exp  CmpF64Close.vgtest  Div64.c  Div64.vgtest  DivF32.c  DivF32.stderr.exp  DivF32Under.vgtest  DivF64.c  DivF64Infinity.stderr.exp  DivF64Infinity.vgtest  DivF64Nan.stderr.exp  DivF64Under.vgtest  F64toF32.c  F64toF32Overflow.c  F64toF32OverflowNeg.c  F64toF32OverflowNeg.stderr.exp  F64toF32Under.c  F64toI32S.vgtest  F64toI32SNaN.c  (+62 more)
cojac-grind/docs/: Makefile.in
cojac-grind/exp-sgcheck/: Makefile.in
cojac-grind/exp-sgcheck/tests/: Makefile.in
cojac-grind/memcheck/: Makefile.in
cojac-grind/memcheck/tests/: Makefile.am  origin5-bz2.stderr.diff-glibc25-amd64  origin5-bz2.stderr.diff-glibc27-ppc64
cojac-grind/mpi/: Makefile.in
cojac-grind/none/tests/: Makefile.in  allexec32
cojac-grind/tests/: Makefile.in
trunk/cogrind/cojac/: README-Cojac.txt  oa_error_mgt.c  oa_include.h  oa_main.c
wiki/: CojacgrindGuide.wiki
(+14 files in other folders)
