include $(top_srcdir)/Makefile.tool-tests.am

dist_noinst_SCRIPTS = filter_stderr

SUBDIRS = .

EXTRA_DIST =  Add32.stderr.exp Add32.vgtest \
              Add32Overflow.stderr.exp Add32Overflow.vgtest \
              Add32OverflowNeg.stderr.exp Add32OverflowNeg.vgtest \
              Add64.stderr.exp Add64.vgtest \
              Add64Overflow.stderr.exp Add64Overflow.vgtest \
              Add64OverflowNeg.stderr.exp Add64OverflowNeg.vgtest \
              AddF32.stderr.exp AddF32.vgtest \
              AddF32Cancel.stderr.exp AddF32Cancel.vgtest \
              AddF32Infinity.stderr.exp AddF32Infinity.vgtest \
              AddF32Nan.stderr.exp AddF32Nan.vgtest \
              AddF32Pre.stderr.exp AddF32Pre.vgtest \
              AddF64.stderr.exp AddF64.vgtest \
              AddF64Cancel.stderr.exp AddF64Cancel.vgtest \
              AddF64Infinity.stderr.exp AddF64Infinity.vgtest \
              AddF64Nan.stderr.exp AddF64Nan.vgtest \
              AddF64Pre.stderr.exp AddF64Pre.vgtest \
              AsinLibcF32.stderr.exp AsinLibcF32.vgtest \
              AsinLibcF32Nan.stderr.exp AsinLibcF32Nan.vgtest \
              AsinLibcF64.stderr.exp AsinLibcF64.vgtest \
              AsinLibcF64Nan.stderr.exp AsinLibcF64Nan.vgtest \
              CmpF64.stderr.exp CmpF64.vgest \
              CmpF64Close.stderr.exp CmpF64Close.vgest \
              Div32.stderr.exp Div32.vgtest \
              Div64.stderr.exp Div64.vgtest \
              DivF32.stderr.exp DivF32.vgtest \
              DivF32Infinity.stderr.exp DivF32Infinity.vgtest \
              DivF32Nan.stderr.exp DivF32Nan.vgtest \
              DivF32Under.stderr.exp DivF32Under.vgtest \
              DivF64.stderr.exp DivF64.vgtest \
              DivF64Infinity.stderr.exp DivF64Infinity.vgtest \
              DivF64Nan.stderr.exp DivF64Nan.vgtest \
              DivF64Under.stderr.exp DivF64Under.vgtest \
              F64toF32.stderr.exp F64toF32.vgtest \
              F64toF32Overflow.stderr.exp F64toF32Overflow.vgtest \
              F64toF32OverflowNeg.stderr.exp F64toF32OverflowNeg.vgtest \
              F64toF32Under.stderr.exp F64toF32Under.vgtest \
			        F64toI32S.stderr.exp F64toI32S.vgtest \
              F64toI32SInf.stderr.exp F64toI32SInf.vgtest \
              F64toI32SNaN.stderr.exp F64toI32SNaN.vgtest \
              F64toI32SOverflow.stderr.exp F64toI32SOverflow.vgtest \
              F64toI32SOverflowNeg.stderr.exp F64toI32SOverflowNeg.vgtest \
              F64toI64S.stderr.exp F64toI64S.vgtest \
              F64toI64SInf.stderr.exp F64toI64SInf.vgtest \
              F64toI64SNaN.stderr.exp F64toI64SNaN.vgtest \
              F64toI64SOverflow.stderr.exp F64toI64SOverflow.vgtest \
              F64toI64SOverflowNeg.stderr.exp F64toI64SOverflowNeg.vgtest \
              LogLibcF64.stderr.exp LogLibcF64.vgtest \
              LogLibcF64Infinity.stderr.exp LogLibcF64Infinity.vgtest \
              LogLibcF64Nan.stderr.exp LogLibcF64Nan.vgtest \
              LogLibcF32.stderr.exp LogLibcF32.vgtest \
              LogLibcF32Infinity.stderr.exp LogLibcF32Infinity.vgtest \
              LogLibcF32Nan.stderr.exp LogLibcF32Nan.vgtest \
              Mul32.stderr.exp Mul32.vgtest \
              Mul32Overflow.stderr.exp Mul32Overflow.vgtest \
              Mul64.stderr.exp Mul64.vgtest \
              Mul64Overflow.stderr.exp Mul64Overflow.vgtest \
              MulF32.stderr.exp MulF32.vgtest \
              MulF32Infinity.stderr.exp MulF32Intinity.vgtest \
              MulF32Nan.stderr.exp MulF32Nan.vgtest \
              MulF32Under.stderr.exp MulF32Under.vgtest \
              MulF64.stderr.exp MulF64.vgtest \
              MulF64Infinity.stderr.exp MulF64Intinity.vgtest \
              MulF64Nan.stderr.exp MulF64Nan.vgtest \
              MulF64Under.stderr.exp MulF64Under.vgtest \
              SqrtF64.stderr.exp SqrtF64.vgtest \
              SqrtF64Nan.stderr.exp SqrtF64Nan.vgtest \
              SqrtLibcF32.stderr.exp SqrtLibcF32.vgtest \
              SqrtLibcF32Nan.stderr.exp SqrtLibcF32Nan.vgtest \
              SqrtLibcF64.stderr.exp SqrtLibcF64.vgtest \
              SqrtLibcF64Nan.stderr.exp SqrtLibcF64Nan.vgtest \
              Sub32.stderr.exp Sub32.vgtest \
              Sub32Overflow.stderr.exp Sub32Overflow.vgtest \
              Sub32OverflowNeg.stderr.exp Sub32OverflowNeg.vgtest \
              Sub64.stderr.exp Sub64.vgtest \
              Sub64Overflow.stderr.exp Sub64Overflow.vgtest \
              Sub64OverflowNeg.stderr.exp Sub64OverflowNeg.vgtest \
              SubF32.stderr.exp SubF32.vgtest \
              SubF32Cancel.stderr.exp SubF32Cancel.vgtest \
              SubF32Infinity.stderr.exp SubF32Infinity.vgtest \
              SubF32Nan.stderr.exp SubF32Nan.vgtest \
              SubF32Pre.stderr.exp SubF32Pre.vgtest \
              SubF64.stderr.exp SubF64.vgtest \
              SubF64Cancel.stderr.exp SubF64Cancel.vgtest \
              SubF64Infinity.stderr.exp SubF64Infinity.vgtest \
              SubF64Nan.stderr.exp SubF64Nan.vgtest \
              SubF64Pre.stderr.exp SubF64Pre.vgtest


check_PROGRAMS =  Add32 \
                  Add32Overflow \
                  Add32OverflowNeg \
                  Add64 \
                  Add64Overflow \
                  Add64OverflowNeg \
                  AddF32 \
                  AddF32Cancel \
                  AddF32Infinity \
                  AddF32Nan \
                  AddF32Pre \
                  AddF64 \
                  AddF64Cancel \
                  AddF64Infinity \
                  AddF64Nan \
                  AddF64Pre \
                  AsinLibcF32 \
                  AsinLibcF32Nan \
                  AsinLibcF64 \
                  AsinLibcF64Nan \
                  CmpF64 \
                  CmpF64Close \
                  Div32 \
                  Div64 \
                  DivF32 \
                  DivF32Infinity \
                  DivF32Nan \
                  DivF32Under \
                  DivF64 \
                  DivF64Infinity \
                  DivF64Nan \
                  DivF64Under \
                  F64toF32 \
                  F64toF32Overflow \
                  F64toF32OverflowNeg \
                  F64toF32Under \
                  F64toI32S \
                  F64toI32SInf \
                  F64toI32SNaN \
                  F64toI32SOverflow \
                  F64toI32SOverflowNeg \
                  F64toI64S \
                  F64toI64SInf \
                  F64toI64SNaN \
                  F64toI64SOverflow \
                  F64toI64SOverflowNeg \
                  LogLibcF64 \
                  LogLibcF64Infinity \
                  LogLibcF64Nan \
                  LogLibcF32 \
                  LogLibcF32Infinity \
                  LogLibcF32Nan \
                  Mul32 \
                  Mul32Overflow \
                  Mul64 \
                  Mul64Overflow \
                  MulF32 \
                  MulF32Infinity \
                  MulF32Nan \
                  MulF32Under \
                  MulF64 \
                  MulF64Infinity \
                  MulF64Nan \
                  MulF64Under \
                  SqrtF64 \
                  SqrtF64Nan \
                  SqrtLibcF32 \
                  SqrtLibcF32Nan \
                  SqrtLibcF64 \
                  SqrtLibcF64Nan \
                  Sub32 \
                  Sub32Overflow \
                  Sub32OverflowNeg \
                  Sub64 \
                  Sub64Overflow \
                  Sub64OverflowNeg \
                  SubF32 \
                  SubF32Cancel \
                  SubF32Infinity \
                  SubF32Nan \
                  SubF32Pre \
                  SubF64 \
                  SubF64Cancel \
                  SubF64Infinity \
                  SubF64Nan \
                  SubF64Pre


AM_LDFLAGS = -lm
